--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/styled-components": "^5.1.0",
     "@types/testing-library__cypress": "^5.0.5",
     "@types/ua-parser-js": "^0.7.35",
+    "@types/victory": "^33.1.4",
     "@types/wcag-contrast": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
@@ -103,6 +104,7 @@
     "typescript": "^4.2.3",
     "ua-parser-js": "^0.7.28",
     "use-count-up": "^2.2.5",
+    "victory": "^35.8.4",
     "wcag-contrast": "^3.0.0",
     "workbox-core": "^6.1.0",
     "workbox-expiration": "^6.1.0",
